--- a/index.html
+++ b/index.html
@@ -182,19 +182,18 @@
 </template>
 <script>
   var fireballSize = 22;
-  var getFireballSpeed = function (left) {
-    if (left == true) { return 5} else {
-      return 2};
-    };
   var wizardSpeed = 3;
   var wizardWidth = 70;
+
+  var getFireballSpeed = function (left) {
+   return (left ? 5 :  2);
+    };
   var getWizardHeight = function (wizardWidth) {
-    return 1.337 * wizardWidth
+    return Math.round(1.337 * wizardWidth)
   };
   var getWizardX = function (width) {
-    return width / 2 - wizardWidth / 2
+    return (width - wizardWidth) / 2
   };
-
   var getWizardY = function (height) {
     return height / 3
   };
