--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+<canvas id="canvas"></canvas>
 <header>
   <svg style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
         86">
@@ -198,7 +199,8 @@
     return height / 3
   };
 
-  </script>
+</script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
