--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
         </div>
         <label>
           <input type="text" name="username"
-                 minlength="2" required
-                 maxlength="25" required
+                 minlength="2" maxlength="25" required
                  class="setup-user-name" value="Синий Пендальф"/>
         </label>
       </div>
